# Omega

./: .dockerignore  .env.example  .fuse_hidden0000001300000001  .fuse_hidden0000001300000002  .fuse_hidden0000001300000003  .fuse_hidden0000001800000001  .fuse_hidden0000001900000001  .fuse_hidden0000001a00000001  .fuse_hidden0000001b00000001  .fuse_hidden0000001d00000001  .fuse_hidden0000002000000001  .fuse_hidden0000002800000002  .fuse_hidden0000002800000003  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COWORK_HANDOFF.md  CURRENT_HANDOFF.md  HANDOFF.md  LLM_MCP_INTERFACE.md  OMEGA_COWORK.md  OMEGA_DATA_SOURCES.md  OMEGA_HANDBOOK.md  OMEGA_HANDOFF_MANIFESTO.MD  OMEGA_LITE.md  OMEGA_RUNTIME.md  OMEGA_RUN_RECIPE.md  OMEGA_STRATEGY.md  PROJECT_STATE.md  README.md  RUN_AUDIT.md  RUN_TRACE.jsonl  SOCCER_ARCHITECTURAL_GAP.md  TRACE_RECOVERY_2026_06_01.md  build_css.py  check_count.py  check_db.py  check_db2.py  check_recs.py  (+16 more)
.agents/plugins/: marketplace.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
alembic/: env.py
alembic/versions/: 0001_initial_v14_schema.py
archive/historical/: OMEGA_HANDBOOK.md  OMEGA_RUN_RECIPE.md  calibration_loop_audit_20260522.md
archive/legacy/: README.md  RUN_AUDIT.md  RUN_TRACE.jsonl
config/: settings.yaml
data/: cc_phase3d_out.json
data/aliases/: COPA_AMERICA.json  EURO.json  FIFA_FRIENDLY.json  FIFA_INTL.json  NATIONS_LEAGUE.json  NFL.json  SOCCER.json  TENNIS.json  WNBA.json  WORLD_CUP.json
data/tennis/: atp_matches_futures_2026.csv  atp_matches_qual_chall_2026.csv  atp_players.csv  atp_rankings_current.csv
docs/: DOC_LIFECYCLE.md  LLM_MCP_INTERFACE.md  TRACE_QUERY_COOKBOOK.md  TRACE_WORKFLOW.md  anchor_parlay_strategy.md  calibration_loop_audit_20260522.md  data_sources.md  historical_calibration_backfill.md  issue28_clv_loop.md  run_batting_props.py  run_slate.py  session_bugs_20260519.md  session_bugs_20260519_propscan.md  session_bugs_20260521_mount_corruption.md  session_bugs_20260522.md  session_bugs_20260525.md  session_bugs_20260526.md  session_log_20260523.md  trace_integrity_bugs_20260523.md
docs/audits/: SIDECAR_LOGGING_AUDIT_2026-06-07.md
docs/bugs/: BUG-sess-20260524-nba1-null-padding.md  README.md
docs/calibration/: context_slicing_runbook.md  input_quality_audit.md
docs/design/: OPERATOR_CONSOLE_REDESIGN_BRIEF.md  operator_console_mockup.html
docs/history/: PHASE_HISTORY.MD
docs/phase6/: ARTIFACT_AUTHORITY.md  DESIGN_PLAN.md  HANDOFF_phase6d_to_h.md  LOGGING_TRACING_QA_BET_TRACKING_REDESIGN.md  POSTGRES_MCP_PHASE1.md  RED_TEAM.md  SCHEMA_GLOSSARY.md  STEP4_5_SMOKE.md  automation_playbook.md  engine_cowork_issues_2026-05-18.md  evidence-signals.md  known_bug_sentinel_plan.md
docs/phase7/: MULTI_SPORT_EXPANSION.md  PHASE7_HANDOFF.md  issue22_qualitative_guardrails_promotion.md
docs/phase8/: BACKEND_PARAMETER_GOVERNANCE.md  CONSOLE_V2_VISUALS.md
docs/qa/: session_qa_sess-20260515-g7d1.md
fixtures/action_plans/: bet_closing_line_capture.json  daily_outcome_evidence_loop.json  daily_trace_intake.json  empty_slate.json  full_lifecycle_maintenance.json  render_session_audits.json  weekly_shadow_review.json
frontend/: index.html
frontend/static/: app.js  styles.css
inbox/: README.md
inbox/action_plans/: sess-20260515-g7d1.json  sess-20260517-p3k8.json
inbox/requests/: ARI_SEA.json  CHC_STL.json  NYY_OAK.json  PHI_LAD.json  SASAKI_K.json  WOO_K.json
inbox/sessions/: sess-20260515-g7d1.json  sess-20260518-mlb1.json  sess-20260518-wcf1.json  sess-20260519-nba1.json  sess-20260519-nyk1.json  sess-20260520-g001.json  sess-20260521-c001.json  sess-20260522-nba1.json  sess-20260523-nba1.json  sess-20260524-nba1.json  sess-20260525-18b5.json  sess-20260526-auto.json  sess-20260526-nba1.json  sess-20260527-mlb1.json  sess-20260528-mlb1.json  sess-20260528-nba1.json  sess-20260528-nba2.json  sess-20260528-prp1.json  sess-20260528-wnb1.json  sess-20260529-mlb1.json  sess-20260529-nba2.json  sess-20260529-socc.json  sess-20260530-mlb1.json  sess-20260530-mlb2.json  sess-20260530-out1.json  sess-20260530-socc.json  sess-20260530-wnb1.json  sess-20260531-mlb1.json  sess-20260531-socc.json
inbox/traces/: sandbox-1206dd5f-8b26.json  sandbox-143018d1-1aba.json  sandbox-154440b2-cbe3.json  (+25 more)
knowledgebase/: Kelly Staking for Edges.txt  Probability Calibration & Predict-Grade-Tune.txt
omega/: __init__.py
omega-exports/: traces_20260516T041846Z.json  traces_20260516T042152Z.json
omega-exports-slim/: latest_view.json  traces_20260516T042203Z.json
omega_lite/: __init__.py  _quality_helpers.py  calibration.py  engine.py  kelly.py  models.py  quality_gate.py  run.py  schemas.py  service.py  validation.py
prompts/: league_analysis_prompt.md  system_prompt.txt
reports/: 0528_Session2_Log.txt  0528_Session_Log.txt  0529_Daily_Bet_Session_Log.txt  0529_Session2_Log.txt  latest.md
scripts/: audit_trace_inbox.py  backfill_closing_lines.py  backfill_evidence_signals.py  backfill_input_snapshot.py  backfill_outcomes_manual.py  backfill_trace_quality.py  bug_sentinel.py  build_omega_lite.py  capture_early_lines.py  cowork_bootstrap.ps1  cowork_preflight.py  db_status.py  export_traces_to_drive.py  fetch_closing_lines.py  fetch_closing_lines_nba.py  fetch_outcomes_all.py  fetch_outcomes_mlb.py  fetch_outcomes_nba.py  fetch_outcomes_props.py  fetch_outcomes_soccer.py  fetch_outcomes_wnba.py  fit_adjustment_policy.py  fit_calibration.py  ingest_closing_lines.py  ingest_traces.py  install_hooks.py  mark_session_qa_failed.py  promote_adjustment_policy.py  promote_profile.py  quarantine_legacy_traces.py  quarantine_sim_bug_traces.py  refresh_wehoop.py  render_session_audits.py  replay_historical_traces.py  report_calibration.py  resolve_odds.py  run_action_plan.py  run_analyze.py  run_baseline_sweep.py  run_champion_challenger.py  (+9 more)
tests/: test_no_legacy_run_artifacts.py
tools/: build_slate_entries.py  extract_contexts.py  migrate_sqlite_to_postgres.py  query_session_results.py  recover_db.py  run_slate.py
(+1108 files in other folders)
