[project]
name = "omega"
version = "0.2.0"
description = "Quantitative sports analytics: deterministic simulation, strategy registry, sandbox-runnable engine"
requires-python = ">=3.12"

dependencies = [
    # Deterministic engine only. No network, no API clients.
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
mcp = [
    "mcp[cli]>=1.27",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    # Keep lint focused on correctness for now; broad wrapping and StrEnum
    # modernization can be handled as a separate mechanical cleanup.
    "E501",
    "UP042",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_any_generics = false
no_implicit_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


[tool.setuptools.packages.find]
include = ["omega*"]
exclude = ["tests*", "docs*", "inbox*", "reports*", "config*", "scripts*"]
